# ChangeLog for app-emulation/qemu
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.189 2013/02/25 05:27:17 cardoe Exp $

  25 Feb 2013; Doug Goldstein <cardoe@gentoo.org> +files/qemu-kvm-1.4,
  qemu-1.4.0.ebuild:
  Patches from Cole Robinson for qemu-kvm -> qemu migration fixes.
  Start on the stable 1.4 patch series. New qemu-kvm wrapper.

*qemu-1.2.2-r4 (25 Feb 2013)

  25 Feb 2013; Doug Goldstein <cardoe@gentoo.org> +qemu-1.2.2-r4.ebuild,
  qemu-1.4.0.ebuild:
  Support file capabilities for helper binaries

  21 Feb 2013; Doug Goldstein <cardoe@gentoo.org> qemu-1.2.2-r3.ebuild,
  +files/bridge.conf:
  Add example qemu-bridge-helper config script.

  17 Feb 2013; Mike Frysinger <vapier@gentoo.org> files/qemu-binfmt.initd,
  files/qemu-binfmt.initd-r1:
  Simplify initial checks.

  17 Feb 2013; Mike Frysinger <vapier@gentoo.org> files/qemu-binfmt.initd,
  files/qemu-binfmt.initd-r1:
  Fix bashisms in init.d scripts.

*qemu-1.4.0 (16 Feb 2013)

  16 Feb 2013; Doug Goldstein <cardoe@gentoo.org> +qemu-1.4.0.ebuild:
  Initial 1.4.0 version bump

*qemu-1.3.1 (16 Feb 2013)

  16 Feb 2013; Doug Goldstein <cardoe@gentoo.org> +qemu-1.3.1.ebuild,
  qemu-9999.ebuild:
  Add a pending 1.3.1 version bump

  10 Feb 2013; Doug Goldstein <cardoe@gentoo.org> qemu-1.2.2-r3.ebuild:
  Fix PYTHON_DEPEND line

  10 Feb 2013; Doug Goldstein <cardoe@gentoo.org> -qemu-1.2.1.ebuild,
  -qemu-1.2.2.ebuild:
  Remove older versions

*qemu-1.2.2-r3 (10 Feb 2013)

  10 Feb 2013; Doug Goldstein <cardoe@gentoo.org> +qemu-1.2.2-r3.ebuild,
  -qemu-1.2.2-r100.ebuild:
  Bump to support two different builds for user targets and
  system targets to allow you to build one static and one
  dynamic. Additionally bump the patchset to include fixes for
  bug #455552 and bug #454364

  10 Feb 2013; Doug Goldstein <cardoe@gentoo.org> qemu-1.3.0.ebuild:
  Add back vgabios which was removed incorrectly qemu-1.3.0.ebuild
