@@ -27,20 +27,20 @@ EBUILD qemu-1.2.2-r3.ebuild 15172 SHA256 15c56932017404d535a9b307b9f8966d771a441
 EBUILD qemu-1.2.2-r4.ebuild 15374 SHA256 cddfd3f042e7e6f438fb082351d4d018f38c760a2e0ccc7a8768f738bd5f56c6 SHA512 16f1cc3d630b8f1c830af07489f946f0eac6bf9665137d20fd6fff80e2f54ed073e7d1e4aff61cd1c514bb82eeb257ec5340030c3e69a6fd34ffd3457bccf3ac WHIRLPOOL 1fb18142842bf62720efe6bed5bd41d9f17b0ecfa326839daec86eadd1c12cd9dae6bc26797481760c6c802c3eb057f14174904de254067ef30d3ab878da97a6
 EBUILD qemu-1.3.0.ebuild 13711 SHA256 bda7012b27a54fc2cc0d0bb800a9192226237ab0fd04279304dea2bc15f5a9b9 SHA512 fd149229fd46f829490331cf48abf46e9ea1c59992d1bd7c4350ce7d1a70bcb4f7ffc14923130ad974ae9124a468cfafa6f746020f4c0e034d8ea50810681076 WHIRLPOOL 1ba4505219a2c28f14b303adae83b4474a40c424eae06b7ec2b0d20a12d14600251f495bb18e6bee498b4d51304a1675d3c7b61b8f959bbd8cf63757b21b1ed6
 EBUILD qemu-1.3.1.ebuild 14978 SHA256 e2e24c04443a2358b8c3ca6c9b02ad1db034423a7c08017c21d533c0298dc3d1 SHA512 90d7827fa5dd4ab96edf6c878cef7276bc9931cdca6c02d96d038f338c8f029d77c2323e67bce13b5d428af840d5d79d18071cbc49c00a52af723c7debbc1cfa WHIRLPOOL a6cbfb4fa295aa27c952c3ac1888263ccd99a2328266cb5f5977e6236f71cb3ed65e4b38cfd15035f61c434cb9d88b269ba6124dadf31d11823fdb15a521b940
-EBUILD qemu-1.4.0.ebuild 15329 SHA256 ac4e6a755ab814b0c105eadad74657918321213c3e10eb543ddb232d14c37fa8 SHA512 d0077ec88bbedb05bbf014a440666d1f2eaf9ddee366233a584dc33f05383611416fa37a7a27a21d1c17e4c873f085102acbc67d07bd64faabef3068dc58e0ee WHIRLPOOL 823cccbd859d2699982bccb92babf23b35781160dfa687529cf54fab86ed9d905fcb4e42f047f657e1be507b624b05877db57b0132df4e399bb13217a378cca4
+EBUILD qemu-1.4.0.ebuild 15439 SHA256 75bc47c2ff5e182c022aa37bac377aca8b5ca353294eb78cc1f7cd1a8d75a8e5 SHA512 a7d2e58f2527a22d11206023cb33d2892f9ad827831c5f888928bf4b0e5f5b8074cadeec7a7e4086ae6fbe818eb3e68af67fa74b30c342d6f72f804a1fd23f80 WHIRLPOOL bceb78f10c2a8732c19c85646b56ae5872e81054faa18b0e0da07fae37e0c7a344b373bda807b15795f3248ecce85bee1b66a52e70e8969179fb9d56b2fcd972
 EBUILD qemu-9999.ebuild 13648 SHA256 a694e912dcdb513b833fe629dd836580fdc541b26484d9f33a9da1ede74c86e4 SHA512 f5209038cfd83041bb0479a4c4a80df15e22f321d9ff7f9f543b2bb4b7cf42660fabed8d32cc455aaf3bcaa51fede305ceac933b8489ce7768370e9b560ac1cf WHIRLPOOL 34acbaef26fd45051d37b67767a4b5a686e299c82b005aef0cf542c42efdf54b29cb02b7ff987f7de9ee702eeb3ba4bac4a89d7bcda4b3ab53ca9ace7f9d9e02
-MISC ChangeLog 30906 SHA256 f4eb646a05b8d5c824a7033a3202ef4a4a4f81d25a712f22ffeda435a94337d1 SHA512 9ec1b38773e6fa3752894b796f16cecf2b9bed6077e4d19c012ab65e8e2b719b9229792d19c880da0a65b6427b4a9c0df2c8262bdf468f51ea79dbc2ae2949d9 WHIRLPOOL ee0217d0050bead0fed75a2a3d072fb7014253b014ffd8358c219b5676179697c2c90be8e1f557ef6475d2489e69e42c2c843e57bfb2037cce348780fc70ca90
-MISC metadata.xml 2969 SHA256 9495aaec1c617cecbd822c10da0e53e7c9a17bab2e68c1c66e134f47bcd7c0ce SHA512 bf03f0e60734551dfe32909a7aea4737d08488e7452ad2e0426f3150573459adc6324809bf797a6943030e567672172a9cd7b32be50e5d246cf33046bea66e9c WHIRLPOOL 987c938ab4d5bb54e0af0ef13d295ac3c0004ebba8b2e1f8a7116d38b5db9590bbfef4bd1154e9e5e7a1f91ae2b816e4c572885d90910975df191c77d56ebaec
+MISC ChangeLog 31171 SHA256 0710f1a8afa87d584ca6ae0309f121e5a63415a7b0e6b5bf83986d8a4dafc9c7 SHA512 b96337fba4dc1f012972efa61c9a5860daf17918c6883bc3c042f9c7b6731087a8440c1540a04489cadecad400d3b62e8ed508453231b73f124f871cc9733b8b WHIRLPOOL 8dd0948a720e02f51e4d31cf2f6c9189da3d1f5e5564482592955fbf8db7e422c2804808d3f8cc2b2b9183aab515496480b01c89e498c2491e43c77b91130a6f
+MISC metadata.xml 3027 SHA256 ef8dfb1742c4d0b967dbf6a51d5f98f1722e2c9367ec359a6011b6fa6c4ed15c SHA512 c0cf75fa65e345c585c4947eba980aaacbc9901aa0609b52da90b19a7f675a143517e040294fbf12a0d63d878b667d12335e8305659eb313c67d3d4d024b8f6d WHIRLPOOL 4ecebe7f8390d3bf7e9c8b10e866903b7d7b5b1e31a42995f13886414cc189d6ac25d2e11bd3f1f558ba13938229f2da456cfe1433dd0c99b3b133bccfdb6033
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQF8BAEBCABmBQJRKvY+XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQF8BAEBCABmBQJRKvw9XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRDMDRGNEJFMDZEQTJGRUY3NkI4MEM3NTlE
-N0RGQThEMzE4RkE5QUVGAAoJENffqNMY+prvaQgIAJEIa10sZeFs9hZyY0MOQNjs
-pPfI6Mb17cjwet/ZQPWsV9qP1vqsOC8c3fwvz7HtdLSRW9KVPTsTqjAydDHfW4qa
-JqCLkmgJwEITcY3kMaZ4yaDQ1bMAVFzKvnKjJaLFqFRMnb3bySIye1C2toX0zGe4
-fpnjQ+F6Z+bcQ+hUL+jI1LpZuQPfYLKFG2GZ32WqWBC9Chj6mKGPcbwqm+pEIMeK
-G9fy01GvIIUt3i0jmqEd3PFHvfllS9E5jfhJ3Fl94su29Jb7djnCmcS2WBxB6eTi
-FCR8aOUHj0utd8hby7nBB03W0lmGxXYcWeE319jWDUVIfQC4Fl4pSD0QdXloEzI=
-=vsmY
+N0RGQThEMzE4RkE5QUVGAAoJENffqNMY+prvy9UH/3NWytXXRZI+lLjnRawkl9qy
+lOwlLAg4g6FZWFvs4ICXGjT6ExPGEHtt1D5eXsgtz1Xa5cDZJp9pOTberGJDLxIm
+n/aBsly+WmncOsSqOG+qiRiCrIf5Jf403VCwb0TVCt3VeLkAwSXvirpHNNO4JIHz
++YLqZuUnQKHolz8PtybYkZckYZR9Aq2WH1JK04H//ZzBtzCExw8U7Qx9IV9pDNpU
+fQKdMYwgQP6M1xVmUHC1SI+/laPP0Rfrvz/A7GCBM0phPT+VTa/2z2W4lrTqZGP4
+Bn46n1BfqJSgIdwtj4QzRUbWJOjRyOewHj1aAVDRDXhAKvW1y76gTqWloXdTyn8=
+=WLCr
 -----END PGP SIGNATURE-----
